--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
-    "hono": "^4.6.3"
+    "hono": "^4.6.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bun": "latest",
